--- a/config/crds/kubecon_v1alpha1_sharedlb.yaml
+++ b/config/crds/kubecon_v1alpha1_sharedlb.yaml
@@ -15,8 +15,16 @@ spec:
   additionalPrinterColumns:
   - name: External-IP
     type: string
-    # JSONPath: .spec.loadBalancerIP
-    JSONPath: .status.loadBalancer
+    # TODO(Huang-Wei): verify how it prints for EKS which uses hostname
+    JSONPath: .status.loadBalancer.ingress[*].*
+  - name: Port
+    type: string
+    JSONPath: .spec.ports[*].port
+  # can't combine protocol info along with "Port" column until
+  # https://github.com/kubernetes/kubernetes/issues/67268 gets implemented
+  - name: Protocol
+    type: string
+    JSONPath: .spec.ports[*].protocol
   - name: Ref
     type: string
     JSONPath: .status.ref
