--- a/config/samples/kubecon_v1alpha1_sharedlb.yaml
+++ b/config/samples/kubecon_v1alpha1_sharedlb.yaml
@@ -6,7 +6,7 @@ metadata:
   name: sharedlb-sample
 spec:
   ports:
-  - port: 8080
-    targetPort: 80
+  # - port: 8080
+  - targetPort: 80
   selector:
     app: nginx
