--- a/config/samples/kubecon_v1alpha1_sharedlb1.yaml
+++ b/config/samples/kubecon_v1alpha1_sharedlb1.yaml
@@ -6,7 +6,7 @@ metadata:
   name: sharedlb-sample1
 spec:
   ports:
-  - port: 8081
-    targetPort: 80
+  # - port: 8081
+  - targetPort: 80
   selector:
     app: nginx
