[WIP] eks implementation

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -45,3 +45,6 @@ version="v1.4.7"
 [[override]]
 name = "github.com/Azure/go-autorest"
 revision = "bca49d5b51a50dc5bb17bbf6204c711c6dbded06"
+[[constraint]]
+  name = "github.com/aws/aws-sdk-go"
+  version = "1.15.61"
