--- a/config/samples/kubecon_v1alpha1_sharedlb2.yaml
+++ b/config/samples/kubecon_v1alpha1_sharedlb2.yaml
@@ -6,7 +6,7 @@ metadata:
   name: sharedlb-sample2
 spec:
   ports:
-  # - port: 8082
-  - targetPort: 80
+  - port: 8082
+    targetPort: 80
   selector:
     app: nginx
