--- a/config/samples/kubecon_v1alpha1_sharedlb3.yaml
+++ b/config/samples/kubecon_v1alpha1_sharedlb3.yaml
@@ -6,7 +6,7 @@ metadata:
   name: sharedlb-sample3
 spec:
   ports:
-  # - port: 8083
-  - targetPort: 80
+  - port: 8083
+    targetPort: 80
   selector:
     app: nginx
