--- a/demos/iks/crs/cr-tcp-random-port.yaml
+++ b/demos/iks/crs/cr-tcp-random-port.yaml
@@ -1,7 +1,7 @@
 apiVersion: kubecon.k8s.io/v1alpha1
 kind: SharedLB
 metadata:
-  name: sharedlb-tcp
+  name: sharedlb-tcp-random-port
 spec:
   ports:
   # - port: 4001
